--- a/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
+++ b/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
@@ -43,7 +43,7 @@ lig.raw$light<-exp(lig.raw$light) # this is needed because we log transformed da
 ```
 Now we have data read and we want to process them with the `read.tags.light.twilight()` function:
 ```{r}
-FLightR.data<-read.tags.light.twilight(lig.raw, end.date="2014-05-17")
+FLightR.data<-read.tags.light.twilight(lig.raw, start.date="2013-06-10", end.date="2014-05-17")
 
 ```
 and process them with
@@ -59,8 +59,8 @@ add calibration location as x,y
 ```{r}
 start=c(5.43, 52.93)
 
-log.light.borders=c(2.5, 8)
-log.irrad.borders=c(-3,1.5)
+log.light.borders=c(2.5, 8) # default values for Intigeo tag
+log.irrad.borders=c(-3,1.5) # default values for Intigeo tag
 ```
 ## Part 2. Calibration
 We need to select days when bird was in a known location. These are typically days in the beginning or in the end the data. To do we first will plot all sun slopes over the whole period and then will decide when is our calibration period
@@ -78,24 +78,22 @@ plot.slopes(calibration.parameters$All.slopes)
 ```
 Now we have to select the calibration periods. One should try to play with 1abline()` to find the proper boundaries for the calibration. The calibration is characterized by more or less coinciding dawn and dusk lines. And absense of a strong pattern - the lines should be norizontal.
 ```{r}
-abline(v=as.POSIXct("2012-04-11")) # fine
-abline(v=as.POSIXct("2011-07-13")) # fine
+abline(v=as.POSIXct("2013-08-10")) # end of first calibration period
+abline(v=as.POSIXct("2014-05-05")) # start of the second calibration period
 ```
 I will use both calibration periods  - one in the beginning and another in the end. Now we create a data.frame where each line is one of the calibration periods. and the columns are start, end, x, y.
 
 ```{r}
-Calibration.periods<-data.frame(calibration.start=as.POSIXct(c("2000-01-01", "2012-04-11") ),
-                                calibration.stop=as.POSIXct(c("2011-07-13", "2020-07-08")),
+Calibration.periods<-data.frame(calibration.start=as.POSIXct(c("2000-01-01", "2014-05-05") ),
+                                calibration.stop=as.POSIXct(c("2013-08-10", "2020-01-01")),
 								lon=start[1], lat=start[2])
 
-log.light.borders=log(c(2, 63)) # these are the values for tags that measure in 1-64
-log.irrad.borders=c(-5.75,1.5) # these are the values one should use for BAS tags
 model.ageing=T # set this FALSE is you are not going to model tag ageing. Actually one can model it only f there are light data in known position in the beginning and in the end of the logger data
 
 ```
 And now we estimate calibration parameters with a real boundaries...
 ```{r}
-calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data, model.ageing=model.ageing, log.light.borders=log(c(2, 63)),  log.irrad.borders=log.irrad.borders)
+calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data, model.ageing=model.ageing, log.light.borders=log.light.borders,  log.irrad.borders=log.irrad.borders)
 
 plot.slopes(calibration.parameters$All.slopes)
 ```
@@ -108,7 +106,7 @@ FLightR.data$twilights$excluded[which(sapply(FLightR.data$twilights$datetime,
                FUN=function(x) min(abs(calibration.parameters$calib_outliers-as.numeric(x))))<3600)]<-1
 Proc.data<-process.twilights(FLightR.data$Data, 
                        FLightR.data$twilights[FLightR.data$twilights$excluded==0,],
-                       measurement.period=60, saving.period=120)
+                       measurement.period=60, saving.period=300)
                        calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data, model.ageing=model.ageing, log.light.borders=log.light.borders,  log.irrad.borders=log.irrad.borders)
 plot.slopes(calibration.parameters$All.slopes)
 }
@@ -142,7 +140,7 @@ FLightR.data$twilights$excluded[which(!as.numeric(FLightR.data$twilights$datetim
 #--------------------------------------------------------
 
 Proc.data<-process.twilights(FLightR.data$Data, FLightR.data$twilights[FLightR.data$twilights$excluded==0,],
-                             measurement.period=60, saving.period=120)
+                             measurement.period=60, saving.period=300)
 
 calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data,
                model.ageing=model.ageing, log.light.borders=log.light.borders,  
@@ -163,8 +161,8 @@ Processed.light<-make.processed.light.object(FLightR.data)
 Now we set up a grid.
 
 ```{r}
-ylim = c(15, 45)
-xlim = c(-92, -70)
+ylim = c(30, 57)
+xlim = c(-14, 13)
 
 Globe.Points<-regularCoordinates(200) # 50 km between each point
 
@@ -261,10 +259,11 @@ For the main run you might want to select:
    3. check.outliers - additional on a fly outliers selection. Normally shoud be chosen as TRUE.
    
 ```{r}
+nParticles=1e6
 Threads= detectCores()-1
 a= Sys.time()
 Result<-run.particle.filter(all.in, save.Res=F, cpus=min(Threads,6),
-                            nParticles=1e6, known.last=TRUE,
+                            nParticles=nParticles, known.last=TRUE,
 							precision.sd=25, save.memory=T, k=NA,
 							parallel=T,  plot=T, prefix="pf",
 							extend.prefix=T, cluster.type="SOCK",
