--- a/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
+++ b/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
@@ -3,7 +3,7 @@
 %\VignetteIndexEntry{Tree swallow analysis}
 %\VignetteDepends{FLightR}
 -->
-# Bar tailed godwit analysis example with Intigeo tag
+# Intigeo tag on a Bar tailed godwit analysis example
 ## Install package
 ```{r}
 require(devtools)
@@ -24,7 +24,6 @@ convert.lux.to.tags("E391_driftadj.lux")
 Now we have created a csv file that can be uploaded to [TAGS](http://tags.animalmigration.org)
 There you define light threshold at 2.5, process all the data and save them with 'save light-twilight' option.
 Many datasets contain some very bad data in the beginning and in the end. If you do not want to clean all these noysy ens you may just write down start and end date of the data you want to work with and then use these values at the next step.
-
 
 Let's now assume that you have done the previous step and have a [.csv](https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed%20godwit_Intigeo_tag_example/E391.csv) file downloaded from TAGS. Now you can process these data:
 
@@ -63,7 +62,7 @@ start=c(5.43, 52.93)
 log.light.borders=c(2.5, 8) # default values for Intigeo tag
 log.irrad.borders=c(-3,1.5) # default values for Intigeo tag
 ```
-## Part 2. Calibration
+##Calibration
 We need to select days when bird was in a known location. These are typically days in the beginning or in the end the data. To do we first will plot all sun slopes over the whole period and then will decide when is our calibration period
 ```{r}
 Calibration.periods<-data.frame(calibration.start=as.POSIXct("2000-01-01"),
@@ -282,6 +281,8 @@ save(Result, file="Result.ageing.model.-5.75.1.5.RData")
 
 ```
 This is it. Now we can do some plotting.
+
+## Plotting results
 First, plot a map:
 ```{r}
 
@@ -347,7 +348,7 @@ lines(Quantiles$Medianlat~Quantiles$Time, col=grey(0.1),lwd=2)
 abline(v=as.POSIXct("2011-09-22 21:34:30 EDT"), col=1, lwd=1, lty=2)
 abline(v=as.POSIXct("2012-03-22 21:34:30 EDT"), col=1, lwd=1, lty=2)
 ```
-# Migration schedules
+## Migration schedules
 We can extract departure arrival estimates from the results we have got. 
 First select grid points that are of interest. For example in the current data we are interested to figure out when our bird left the Netherlands. We will make  a boundary at Lat 2&deg;
 ```{r}
