--- a/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
+++ b/examples/black-tailed godwit_Intigeo_tag_example/godwit_intigeo_analysis.Rmd
@@ -107,18 +107,23 @@ The next part is needed to exclude very strong outliers if there are some
 
 if (length(calibration.parameters$calib_outliers)>0) {
 FLightR.data$twilights$excluded[which(sapply(FLightR.data$twilights$datetime,
-               FUN=function(x) min(abs(calibration.parameters$calib_outliers-as.numeric(x))))<3600)]<-1
+        FUN=function(x) min(abs(calibration.parameters$calib_outliers-as.numeric(x))))<3600)]<-1
 Proc.data<-process.twilights(FLightR.data$Data, 
-                       FLightR.data$twilights[FLightR.data$twilights$excluded==0,],
-                       measurement.period=60, saving.period=300)
-                       calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data, model.ageing=model.ageing, log.light.borders=log.light.borders,  log.irrad.borders=log.irrad.borders)
+        FLightR.data$twilights[FLightR.data$twilights$excluded==0,],
+        measurement.period=60, saving.period=300)
+        calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data, 
+        model.ageing=model.ageing, log.light.borders=log.light.borders,
+        log.irrad.borders=log.irrad.borders)
 plot.slopes(calibration.parameters$All.slopes)
 }
 ```
 Now we create a preliminary calibration and use it to check whether there are serious outliers that should be excluded before hand.
 
 ```{r}
-Calibration=create.calibration(calibration.parameters$All.slopes, Proc.data, FLightR.data, log.light.borders=log.light.borders, log.irrad.borders=log.irrad.borders, start, ageing.model=calibration.parameters$ageing.model)
+Calibration=create.calibration(calibration.parameters$All.slopes, Proc.data,
+        FLightR.data, log.light.borders=log.light.borders,
+        log.irrad.borders=log.irrad.borders, start,
+        ageing.model=calibration.parameters$ageing.model)
 
 library(parallel)
 Threads=detectCores()-1 # setting how many cores we allow to use
